lines will not introduce additional, incorrect whitespace in the overview
data.

=item *

If a user is not authorized to approve articles (using the A access
control in readers.conf), articles that include Approved headers will be
rejected even if posted to unmoderated groups.  Some other site may
consider that group to be moderated.

=item *

The -g option to nnrpd is no longer supported.  If you are verifying
passwords against the system password database, see the ckpasswd(8) man
page, and in particular the -s option.  (A much better idea would be to
just use PAM, which ckpasswd supports.)

=item *

All of the applicable bug fixes from the INN 2.4 STABLE series are also
included in INN 2.5.

=back

=head1 Upgrading from 2.3 to 2.4

The inn.conf parser has changed between INN 2.3 and 2.4.  Due to that
change, options in F<inn.conf> that contain whitespace or a few other
special characters must be quoted with double quotes, and empty parameters
(parameters with no value) are not allowed.  INN 2.4 comes with a script,
B<innupgrade>, run automatically during C<make update>, that will attempt
to fix any problems that it finds with your F<inn.conf> file, saving the
original as F<inn.conf.OLD>.

This change is the beginning of standardization of parsing and syntax
across all of INN's configuration files.

The history subsystem now has a standard API that allows other backends to
be used.  Because of this, you now need to specify the history method in
F<inn.conf>.  Adding:

    hismethod: hisv6

will tell INN to use the same history backend as was used in previous
versions.  B<innupgrade> should take care of this for you.

ovdb is known to have some locking and timing issues related to how nnrpd
shuts down (or fails to shut down) the overview databases.  If you have
stability problems with ovdb, try setting readserver to true in
F<ovdb.conf>.  This will funnel all ovdb reads through a single process
with a cleaner interface to the underlying BerkeleyDB database.
